Stop scrollbars from covering text in flux editor

--- a/ui/src/shared/components/code_mirror/_ThemeTimeMachine.scss
+++ b/ui/src/shared/components/code_mirror/_ThemeTimeMachine.scss
@@ -7,6 +7,7 @@
 .cm-s-time-machine {
   background-color: $g2-kevlar;
   color: $g11-sidewalk;
+  padding-right: 16px;
 
   .cm-variable {
     color: $c-pool;
